--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@types/node": "14.11.2",
     "@types/react": "16.9.49",
     "@types/react-dom": "16.9.8",
+    "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "node-sass": "4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
+    "redux": "4.0.5",
+    "redux-thunk": "2.3.0",
     "typescript": "4.0.3"
   },
   "scripts": {
@@ -39,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "redux-devtools-extension": "2.13.8",
     "stylelint": "13.7.2",
     "stylelint-order": "4.1.0",
     "stylelint-scss": "3.18.0"
