chore(package): install dep react-use

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^5.4.0",
+    "react-use": "15.3.4",
     "redux-devtools-extension": "2.13.8",
     "stylelint": "13.7.2",
     "stylelint-order": "4.1.0",
