--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@types/react-dom": "16.9.8",
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "4.6.0",
+    "@typescript-eslint/parser": "4.6.0",
+    "eslint-config-htmlacademy": "0.6.0",
+    "eslint-plugin-react": "7.21.5",
     "node-sass": "4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -19,7 +23,7 @@
     "react-scripts": "3.4.3",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
-    "typescript": "4.0.3"
+    "typescript": "4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
