--- a/package.json
+++ b/package.json
@@ -2,28 +2,29 @@
   "name": "picture-brain",
   "version": "0.1.0",
   "private": true,
+  "home": "/picture-match",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/node": "14.11.2",
-    "@types/react": "16.9.49",
-    "@types/react-dom": "16.9.8",
-    "@types/react-redux": "7.1.9",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.2",
+    "@types/node": "^14.11.2",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
-    "@typescript-eslint/eslint-plugin": "4.6.0",
-    "@typescript-eslint/parser": "4.6.0",
-    "eslint-config-htmlacademy": "0.6.0",
-    "eslint-plugin-react": "7.21.5",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "eslint-config-htmlacademy": "^2.0.0",
+    "eslint-plugin-react": "^7.21.5",
     "node-sass": "4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "7.2.1",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3",
-    "redux": "4.0.5",
-    "redux-thunk": "2.3.0",
-    "typescript": "4.0.5"
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "typescript": "4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,10 +49,10 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^5.4.0",
-    "react-use": "15.3.4",
-    "redux-devtools-extension": "2.13.8",
-    "stylelint": "13.7.2",
-    "stylelint-order": "4.1.0",
-    "stylelint-scss": "3.18.0"
+    "react-use": "^15.3.4",
+    "redux-devtools-extension": "^2.13.8",
+    "stylelint": "^13.7.2",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.18.0"
   }
 }
