--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "picture-brain",
   "version": "0.1.0",
   "private": true,
-  "home": "/picture-match",
+  "homepage": "/picture-match",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
